# udemy-ai-agents-langchain-langgraph

./: LICENSE  README.md  app.py  baa.txt  chains.py  chains2.py  coding-exercise-1.py  conftest.py  foo.txt  foolish.txt  ice_breaker.py  ingestion.py  langchain-course-reflexion-agent.excalidraw  langchain_client.py  log.py  main.py  medium-blog.txt  nodes.py  output_parsers.py  pyproject.toml  pytest.ini  react.py  schemas.py  tool_executor.py  twitter_client.py
agents/: linkedin_lookup_agent.py
backend/: core.py
faiss_index/: index.faiss  index.pkl
graph/: graph.py  state.py
graph/chains/: answer_grader.py  generation.py  hallucination_grader.py  retrieval_grader.py  routers.py
graph/chains/tests/: test_chains.py
graph/nodes/: __init__.py  generate.py  grade_documents.py  retrieve.py  web_search.py
reflection_agent/: chains.py  main.py
reflection_agent_2/: chains_2.py  debug.py  main.py
servers/: weather_server.py
templates/: index.html
third_parties/: linkedin.py
tools/: __init__.py  tools.py
twitter/: TWITTER_SETUP.md  main.py  twitter_client.py
