[project]
name = "langchain-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.9.0",
    "chroma>=0.2.0",
    "isort>=6.1.0",
    "langchain>=0.3.27",
    "langchain-chroma>=0.1.4",
    "langchain-community>=0.3.30",
    "langchain-openai>=0.3.34",
    "langchain-pinecone>=0.2.12",
    "langchain-tavily>=0.1.0",
    "langchainhub>=0.1.21",
    "python-dotenv>=1.1.1",
    "streamlit>=1.50.0",
]
